# data-structures-project

./: pyproject.toml
src/: stack.py
tests/: test_stack.py
